# SFM-Text-Splitter

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.md  build_linux_appimage.sh  build_windows.bat  pyproject.toml  requirements.txt  sfm_text_splitter.spec
docs/: index.html  index.md  script.js  style.css  usage.html  usage.md
scripts/: filename_utils.py  io_utils.py  marker_config.py  sfm_parser.py  split_sfm.py
src/sfm_text_splitter/: __init__.py  app.py
src/sfm_text_splitter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tools/: make_icon.py
